SearchBar class component, setup dev server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "search youtube through API",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "start": "webpack-dev-server --colors --inline --port 8080 --watch",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
