--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "search youtube through API and play during a pomodoro timer",
   "main": "index.js",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "postinstall": "webpack -p"
   },
   "author": "flanthedev",
-  "license": "ISC",
+  "engines": {
+    "node": "8.7.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
@@ -21,6 +25,7 @@
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
+    "express": "^4.16.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-youtube": "^7.5.0",
